More curves & data save

--- a/style.css
+++ b/style.css
@@ -52,3 +52,8 @@ body {font-family: Arial;
     background-color: #ccc;
     color: black;   
 }
+
+#save{
+    background-color: #ccc;
+    color: black;   
+}
